--- a/packages/web/src/App.css
+++ b/packages/web/src/App.css
@@ -3,20 +3,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('/bg1.svg');
+  background-image: url("/bg1.svg");
   object-fit: cover;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
- 
 }
- 
+
 .glass {
   position: relative;
   background: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(2px) saturate(180%);
   border: 1px solid rgba(255, 255, 255, 0.8);
   border-radius: 2rem;
-  box-shadow: 0 8px 32px rgba(31, 38, 135, 0.2), 
-              inset 0 4px 20px rgba(255, 255, 255, 0.3);
+  box-shadow:
+    0 8px 32px rgba(31, 38, 135, 0.2),
+    inset 0 4px 20px rgba(255, 255, 255, 0.3);
 }
